--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html> -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -8,11 +8,11 @@
 <body>
   <div id="sidebar">
     <h1 id="matrigram">MATRIGRAM</h1>
-    <div id="container">
+    <div class="select-container">
       <select id="selection">
         <option value="custom">Custom</option>
       </select>
-      <div id="arrow"></div>
+      <div class="select-arrow"></div>
     </div>
     <div id="matrix">
       <input id="_0" type="text" value="0" autocomplete="off">
@@ -28,13 +28,13 @@
     <button onclick="apply()">Filter Away!</button>
     <button onclick="reset()">Clear Filters</button>
   </div>
-  <div id="content">
+  <div id="main">
     <div id="dropzone">
       Drop Your Image Here
       <br/>
       <button id="picker">Or Pick One</button>
     </div>
-    <canvas id="canvas"> </canvas>
+    <canvas id="canvas" width="0" height="0" style="display: none;"> </canvas>
   </div>
   <script src="script.js"></script>
 </body>
